# radar

./: LICENSE  RADARvisualizer-1.0.eb  README.md  build_dependencies.sh  compile-to-binary.sh  install-environment.sh  pyproject.toml  runRadarGUI_analyze.py  set_env_barbora.sh  set_env_karolina.sh
README/: Makefile  apps.tex  config_etc.tex  readme.tex
input/: readex_header.tex
scripts/: renameMeasurements.py  renamefiles.py
src/: all_tables.py  csv_vals_edit.py  data_load.py  data_plot.py  design_csv_vals_edit.py  design_main_menu.py  design_radarGUI_analyze.py  design_timeline_visualisation.py  heatmap.py  main_menu_analyze.py  mericOpt.py  mericVisualizer.py  pydot_example.py  pyyed_tree.py  radarGUI_analyze.py  samples_plot.py  texReportDialog.py  timeline_visualisation.py  ui_base.py
