[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "radar-visualizer"
version = "0.12"
dependencies = [
    "scikit-learn",
    "matplotlib",
    "packaging",
    "seaborn",
    "PyQt6",
    "pydot",
    "pyyed",
]
requires-python = ">=3.8"
description = "The RADAR visualizer is an application designed to present behavior of an HPC application and its subregions. It visualizes data measured by MERIC runtime system, that provides resources consumption monitoring and dynamichardware and system-software parameters tuning to save energy to solution according the Horizon 2020 READEX approach."
readme = "README.md"
license = {file = "LICENSE"}

