[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "radar-visualizer"
version = "0.12"
dependencies = [
    "scikit-learn",
    "matplotlib",
    "packaging",
    "seaborn",
    "PyQt6",
    "pydot",
    "pyyed",
]
requires-python = ">=3.8"

[tool.setuptools]
py-modules = ["runRadarGUI_analyze"]
packages = ["src"]

[project.scripts]
radar-gui = "runRadarGUI_analyze:main"
